# tg_translator_v2

./: .gitignore  CLAUDE.md  pyproject.toml  requirements-test.txt  requirements.txt  test.bat
app/: admin_config.py  admin_dashboard.py  admin_events.py  admin_logs.py  admin_manager.py  admin_prompt.py  aggregator.py  flask_app.py
app/static/: dashboard.js  events_edit_modal.js
app/static/css/: admin_config.css  admin_manager.css  column_chooser.css  dashboard.css  modal.css  source_message_edit_modal.js
app/templates/: 404.html  admin_config.html  admin_dashboard.html  admin_events.html  admin_logs.html  admin_manager.html  admin_prompt_edit.html  back_button.html  base.html  events_edit_modal.html  home.html  login.html
app/templates/components/: modal.html  nested_sidebar_link.html  sidebar.html  sidebar_link.html  spinner_loader.html
translator/: bot.py  config.py  models.py  pricing.py  prompt_template.txt  pytest.ini
translator/db/: __init__.py  connection.py  events_dao.py  migrate.py  schema.sql
translator/services/: admin_commands.py  admin_i18n.py  admin_menu.py  admin_prefs.py  admin_store.py  admin_wizard.py  anthropic_client.py  channel_logger.py  cost_report.py  env_store.py  error_sender.py  event_logger.py  log_forwarding.py  telegram_sender.py
translator/tests/: anthropic_smoke.py  anthropic_test.py  test_admin_auth.py  test_admin_commands.py  test_admin_i18n.py  test_admin_menu.py  test_admin_prefs.py  test_admin_store.py  test_bot.py  test_bot_error_handling.py  test_caption_split.py  test_channel_utils.py  test_config.py  test_cost_report.py  test_env_store.py  test_error_format.py  test_error_sender.py  test_event_logger.py  test_events_dao.py  test_log_forwarding.py  test_message_mapping.py  test_message_utils.py  test_message_utils_comprehensive.py  test_pricing.py  test_telegram_sender.py  test_telegram_sender_advanced.py  test_telegram_sender_edge.py  test_translation_utils.py  test_utils_async.py  test_utils_html.py
translator/utils/: channel_utils.py  error_format.py  message_utils.py  prompt_validation.py  single_instance.py  translation_utils.py  utils_async.py  utils_html.py
